fixes jumpy about link in mobile header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,7 +64,7 @@ a:hover {
 * 
 **/
 .about {
-  display:none;
+  display:none; /* was doing a weird jump to adjust it for the floaty nav #todo */ 
   position:absolute;
   top:15px;
   right:40px;
@@ -74,7 +74,6 @@ a:hover {
 @media (max-width: 480px) {
   .about {
       position:absolute;
-      top:15px;
       right:20px;
     }
 }
@@ -82,18 +81,15 @@ a:hover {
 /* iPhone 6s and down  */
 @media (max-width: 320px) {
 .about {
-      position:absolute;
-      top:10px;
       right:7px;
     }
 }
-
-
 
 .about a {
   /* matches tagline */
   font-family: "brandon-grotesque",sans-serif;
   color: #cbcacc;
+  color: #f7eedf;
   text-transform: uppercase;
   font-size: 1.3em;
   text-align: center;
@@ -185,11 +181,6 @@ a:hover {
   text-transform: uppercase;
   font-size: 1.4em;
   text-align: center;
-}
-@media (max-width: 979px) {
-.tagline h2 {
-      /* color: #cbcacc; */
-  }
 }
 
 .project-grid {
